<resources>
    <string name="app_name">Menuguru</string>
    <string name="seleciona_data_reserva_oferta">Selecione a data para reservar a\nmesa e usufruir da oferta</string>
    <string name="para_quando">Para quando gostaria de reservar mesa?</string>
    <string name="agora">Agora</string>
    <string name="sem_data_especifica">Sem data especifica</string>
    <string name="favoritos">Favoritos</string>
    <string name="encontrar_mesa">Encontrar mesa</string>
    <string name="perto_de_mim">Perto de mim</string>
    <string name="menus">Menus</string>
    <string name="sugestoes">Sugestões</string>
    <string name="Especias">Especias</string>
    <string name="Reservas">Reservar</string>
    <string name="horrivel">Horrível</string>
    <string name="mau">Mau</string>
    <string name="bom">Bom</string>
    <string name="muito_bom">Muito bom</string>
    <string name="excelente">Excelente</string>
    <string name="sem_coments">Sem comentários</string>
    <string name="seja_o_primeiro_c">Seja o primeiro a avaliar este restaurante</string>
    <string name="escreva_baixo">Escreva abaixo a sua opinião</string>
    <string name="ver_todos">Ver todos</string>
    <string name="aberto">Aberto agora</string>
    <string name="fechado">Fechado</string>
    <string name="hoje">Hoje</string>
    <string name="info_rest">Informações úteis</string>
    <string name="reportar_erro">Reportar erro</string>
    <string name="o_que_esta_errado">O que está errado?</string>
    <string name="morada_errada">Morada errada</string>
    <string name="ementa_desactualizada">Ementa desatualizada</string>
    <string name="outros_detalhes">Outros detalhes (Opcional)</string>
    <string name="avalie_aqui">Avalie aqui a sua visita</string>
    <string name="sem_comentarios">Sem comentários</string>
    <string name="seja_o_primeiro_avaliar">Seja o primeiro a avaliar este restaurante</string>
    <string name="enviar">Enviar</string>
    <string name="comentarios">Comentários</string>
    <string name="resposta" translatable="false">Resposta</string>
    <string name="inicio">Início</string>
    <string name="votacoes">Avaliações</string>
    <string name="reservas">Reservas</string>
    <string name="definicao">Definições</string>
    <string name="destaque">Destaques</string>
    <string name="como">Como Funciona</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="action_example" translatable="false">Example action</string>
    <string name="action_settings" translatable="false">Settings</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="app_id" translatable="false">619399271450515</string>
    <string-array name="pesquisa">
        <item>Filtros Avançados</item>
        <item>Inspiração</item>
        <item>Cancelar</item>
    </string-array>
    <string name="localizacao" translatable="false">Localização</string>
    <string name="title_activity_localizacao">Localizacao</string>
    <string name="hello_world" translatable="false">Hello world!</string>
    <string name="email_espalhe_palavra" translatable="false">Estou a usar a Menu Guru para reservar mesas e descobrir menus especiais. Visita o site e faz as tuas descobertas.
        www.menuguru.pt</string>
    <string-array name="linguas">
        <item>Português</item>
        <item>Italiano</item>
        <item>Alemão</item>
        <item>Espanhol</item>
        <item>Francês</item>
        <item>Inglês</item>
    </string-array>
    <string-array name="defenicoes_array">
        <item>A minha Conta</item>
        <item>Favoritos</item>
        <item>Idioma</item>
        <item>Sobre a Menu Guru</item>
        <item>Termos e Condições</item>
        <item>Política de Privacidade</item>
        <item>Espalhe a palavra</item>
        <item>Diga-nos o que pensa</item>
        <item>Classifique a App</item>
    </string-array>
    <string-array name="dias_semana">
        <item>Domingo</item>
        <item>Segunda-feira</item>
        <item>Terça-feira</item>
        <item>Quarta-feira</item>
        <item>Quinta-feira</item>
        <item>Sexta-feira</item>
        <item>Sábado</item>
    </string-array>
    <string-array name="refeicoes">
        <item>Almoço</item>
        <item>Jantar</item>
    </string-array>
    <string-array name="headersdefenicoes">
        <item>Perfil</item>
        <item>Info</item>
        <item>Feedback</item>
    </string-array>
    <string name="title_activity_pesquisa_avancada">Pesquisa_avancada</string>
    <string name="title_activity_inspiracao">Inspiração</string>
    <string name="sobre_menuguru" translatable="false">"O QUE É A MENU GURU?

É uma plataforma online que lhe permite encontrar uma diversidade de restaurantes, consultar as ementas, ter acesso a campanhas especiais únicas e reservar mesas online.


COMO FUNCIONA A MENU GURU?

A plataforma Menu Guru permite-lhe encontrar restaurantes perto de si, ver as nossas sugestões de restaurantes e pesquisar restaurantes de acordo com os seus desejos.

Permite-lhe ainda reservar mesas online, resgatar vales de oferta diretamente da nossa plataforma e usufruir de campanhas especiais nos mais variados locais pagando diretamente no restaurante.

Crie a sua lista de restaurantes favoritos e partilhe essa lista com os seus amigos.

Consulte os menus do dia, as ementas completas e os menus especiais.

Verifique se o restaurante se encontra aberto ou fechado.

Aceda à rota do restaurante e encontre-o sem problemas.

Descubra o que está a acontecer, partilhe a sua opinião e inspire mais pessoas a conhecer os restaurantes que visitou.

Parta à aventura para viver novas experiências.


COMO PODE ENTRAR EM CONTACTO CONNOSCO?

É simples. Escreva-nos através do email:
hello@menuguru.net"</string>
    <string name="termos_condicoes" translatable="false">Ao usar os serviços da plataforma Menu Guru, concorda com o seguinte:\n\nO conteúdo desta plataforma é apenas para fins informativos.\n\nA plataforma Menu Guru está isenta de qualquer responsabilidade por qualquer informação que se tenha tornado desactualizada desde a última vez que as informações foram actualizadas.\n\nA plataforma Menu Guru reserva-se o direito de fazer alterações e correcções, em qualquer parte do conteúdo desta plataforma e a qualquer momento, sem aviso prévio.\n\nA plataforma Menu Guru não garante os preços indicados nem a disponibilidade de todos os itens dos menus em nenhum restaurante.\n\nTodos os nomes dos restaurantes, itens dos menus foram cedidas por pessoas afectas ao restaurante.\n\nSalvo indicação em contrário, todas as imagens e informações contidas nesta plataforma foram autorizadas por pessoas afectas ao restaurante e são acreditadas para serem de domínio público, como material promocional, fotos de publicidade e/ou de meios de comunicação.\n\nSolicitamos o envio de um e-mail se for o proprietário dos direitos de autor de qualquer conteúdo neste plataforma e se, no seu entender, o uso do material violar, sob qualquer forma, a lei de direitos de autor. Neste caso, por favor indique a localização exacta do conteúdo em questão.\n</string>
    <string name="ola">Olá</string>
    <string name="preencher">Preencha os dados para aceder à sua conta.</string>
    <string name="bt_iniciar">Iniciar sessão</string>
    <string name="ou">ou</string>
    <string name="bt_face">Entrar com Facebook</string>
    <string name="esq_pass">Esqueceu-se da password?</string>
    <string name="registo">Registar-se na Menu Guru</string>
    <string name="texto_recuperar">Por favor introduza o seu email.</string>
    <string name="cancelar">Cancelar</string>
    <string name="ok" translatable="false">Ok</string>
    <string name="qwert" translatable="false">qwert</string>
    <string name="sel_hora">Selecione a hora</string>
    <string name="sel_pessoa">Selecione o número de pessoas</string>
    <string name="seg">Seguinte</string>
    <string name="ant">Anterior</string>
    <string name="selobs">Observações</string>
    <string name="conf">Confirme os dados para efectuarmos  a sua reserva.</string>
    <string name="reserva">Reserva para</string>
</resources>