<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/silver">

    <Button
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:text="@string/bt_iniciar"
        android:id="@+id/bt_login"
        android:layout_gravity="center_horizontal"
    android:layout_below="@+id/edit_data_nasc"
    android:layout_centerHorizontal="true"
    android:layout_marginTop="20dp" />

    <Button
        android:layout_width="350dp"
        android:layout_height="wrap_content"

        android:text="@string/bt_face"
        android:id="@+id/bt_face"
        android:layout_gravity="center_horizontal"
        android:layout_below="@+id/textView3"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:text="@string/registo"
        android:id="@+id/registo"
        android:layout_gravity="center_horizontal"
        android:layout_alignParentBottom="true"
    android:layout_alignParentLeft="true"
    android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

    android:textAppearance="?android:attr/textAppearanceLarge"
    android:text="@string/ola"
    android:id="@+id/textView"
    android:layout_alignParentTop="true"
    android:layout_centerHorizontal="true"
    android:layout_marginTop="20dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/preencher"
        android:id="@+id/textView2"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/edit_email"
        android:layout_below="@+id/textView2"
        android:layout_marginTop="20dp"
        android:layout_alignRight="@+id/bt_login"
        android:layout_alignEnd="@+id/bt_login"
        android:layout_alignLeft="@+id/bt_login"
        android:layout_alignStart="@+id/bt_login"
        android:hint="Email"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/edit_data_nasc"
        android:layout_below="@+id/edit_email"
        android:layout_alignLeft="@+id/edit_email"
        android:layout_alignStart="@+id/edit_email"
        android:layout_alignRight="@+id/edit_email"
        android:layout_alignEnd="@+id/edit_email"
        android:layout_marginTop="20dp"
        android:hint="Password"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/ou"
        android:id="@+id/textView3"
        android:layout_below="@+id/bt_login"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/esq_pass"
        android:id="@+id/textView4"
        android:layout_above="@+id/registo"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="40dp" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/bt_login"
        android:layout_toLeftOf="@+id/textView3"
        android:layout_toStartOf="@+id/textView3"
        android:layout_above="@+id/textView3"
        android:layout_marginTop="10dp"
        android:background="@color/black"></LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@+id/bt_login"
        android:layout_toRightOf="@+id/textView"
        android:layout_toEndOf="@+id/textView"
        android:layout_above="@+id/textView3"
        android:layout_marginTop="10dp"
        android:background="@color/black"></LinearLayout>


</RelativeLayout>
