<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="455dp"
        android:background="@drawable/base_bloco">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/ant"
            android:id="@+id/bt_ant_pes"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="30dp"
            android:layout_marginBottom="30dp"
            android:textColor="@color/dourado" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/seg"
            android:id="@+id/bt_seg_dados"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="false"
            android:layout_marginBottom="30dp"
            android:layout_marginRight="30dp"
            android:textColor="@color/dourado"
            android:layout_alignParentStart="false" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/selobs"
            android:id="@+id/textView3"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="85dp" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/editText_obs"
            android:layout_below="@+id/textView3"
            android:layout_toEndOf="@+id/bt_ant_pes"
            android:layout_toStartOf="@+id/bt_seg_dados"
            android:layout_marginTop="20dp"
            android:layout_alignRight="@+id/bt_seg_dados"
            android:layout_alignEnd="@+id/bt_seg_dados"
            android:layout_alignLeft="@+id/bt_ant_pes"
            android:layout_alignStart="@+id/bt_ant_pes"
            android:layout_above="@+id/textView4"
            android:layout_marginBottom="20dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/qwert"
            android:id="@+id/textView4"
            android:layout_above="@+id/bt_ant_pes"
            android:layout_marginBottom="50dp"
            android:layout_alignLeft="@+id/bt_ant_pes"
            android:layout_alignStart="@+id/bt_ant_pes"
            android:layout_alignRight="@+id/bt_seg_dados"
            android:layout_alignEnd="@+id/bt_seg_dados" />

    </RelativeLayout>
</LinearLayout>