<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="455dp"
        android:background="@drawable/base_bloco">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/ant"
            android:id="@+id/bt_ant_obs"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginLeft="30dp"
            android:layout_marginBottom="30dp"
            android:textColor="@color/dourado" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/seg"
            android:id="@+id/bt_conf"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="false"
            android:layout_marginBottom="30dp"
            android:layout_marginRight="30dp"
            android:textColor="@color/dourado"
            android:layout_alignParentStart="false" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/conf"
            android:id="@+id/textView_coment_coment"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="85dp"
            android:gravity="center"
            android:paddingLeft="10dp"
            android:paddingRight="10dp" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/edit_nome"
            android:layout_below="@+id/textView_coment_coment"
            android:layout_alignRight="@+id/bt_conf"
            android:layout_alignEnd="@+id/bt_conf"
            android:layout_alignLeft="@+id/bt_ant_obs"
            android:layout_alignStart="@+id/bt_ant_obs"
            android:layout_marginTop="10dp"
            android:gravity="center" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:ems="10"
            android:id="@+id/edit_telefone"
            android:layout_below="@+id/edit_nome"
            android:layout_alignRight="@+id/edit_nome"
            android:layout_alignEnd="@+id/edit_nome"
            android:layout_marginTop="10dp"
            android:layout_alignLeft="@+id/edit_nome"
            android:layout_alignStart="@+id/edit_nome"
            android:gravity="center" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/edit_email"
            android:layout_below="@+id/edit_telefone"
            android:layout_alignLeft="@+id/edit_telefone"
            android:layout_alignStart="@+id/edit_telefone"
            android:layout_alignRight="@+id/edit_telefone"
            android:layout_alignEnd="@+id/edit_telefone"
            android:layout_marginTop="10dp"
            android:gravity="center" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/reserva"

            android:layout_below="@+id/edit_email"
            android:layout_toRightOf="@+id/bt_ant_obs"
            android:layout_toEndOf="@+id/bt_ant_obs"
            android:layout_marginTop="23dp"
            android:layout_toLeftOf="@+id/bt_conf"
            android:layout_toStartOf="@+id/bt_conf"
            android:gravity="center"
            android:id="@+id/tv_data" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:id="@+id/textView_data"
            android:layout_toEndOf="@+id/bt_ant_obs"
            android:layout_alignEnd="@+id/edit_email"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:gravity="center"
            android:layout_below="@+id/textView_hora"
            android:layout_alignLeft="@+id/edit_email"
            android:layout_alignStart="@+id/edit_email" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:id="@+id/textView_hora"
            android:layout_toEndOf="@+id/bt_ant_obs"
            android:gravity="center"
            android:paddingLeft="10dp"
            android:layout_alignLeft="@+id/textView_data"
            android:layout_alignStart="@+id/textView_data"
            android:layout_below="@+id/tv_data"
            android:layout_alignRight="@+id/textView_data"
            android:layout_alignEnd="@+id/textView_data"
            android:layout_marginTop="5dp" />
    </RelativeLayout>
</LinearLayout>